Fix Table of Contents Spacing (#25)

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -41,6 +41,7 @@ button {
 	right: 5px;
 	bottom: 5px;
 	background: #A7D4D2;
+	line-height: 20px;
 	}
 
 .label {
